tests/ui/feature-gates/feature-gate-diagnostic-on-move.stderr
warning: unknown diagnostic attribute
  --> $DIR/feature-gate-diagnostic-on-move.rs:5:15
   |
LL | #[diagnostic::on_move(message = "Foo")]
   |               ^^^^^^^
   |
   = note: `#[warn(unknown_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

error[E0382]: use of moved value: `foo`
  --> $DIR/feature-gate-diagnostic-on-move.rs:15:15
   |
LL |     let foo = Foo;
   |         --- move occurs because `foo` has type `Foo`, which does not implement the `Copy` trait
LL |     takes_foo(foo);
   |               --- value moved here
LL |     let bar = foo;
   |               ^^^ value used here after move
   |
note: consider changing this parameter type in function `takes_foo` to borrow instead if owning the value isn't necessary
  --> $DIR/feature-gate-diagnostic-on-move.rs:10:17
   |
LL | fn takes_foo(_: Foo) {}
   |    ---------    ^^^ this parameter takes ownership of the value
   |    |
   |    in this function
note: if `Foo` implemented `Clone`, you could clone the value
  --> $DIR/feature-gate-diagnostic-on-move.rs:8:1
   |
LL | struct Foo;
   | ^^^^^^^^^^ consider implementing `Clone` for this type
...
LL |     takes_foo(foo);
   |               --- you could clone this value

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0382`.
